argocd/apps/squad-a/webserver-go-01/base/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: webserver-go-01
spec:
  replicas: 1
  selector:
    matchLabels:
      app: webserver-go-01
  template:
    metadata:
      labels:
        app: webserver-go-01
    spec:
      containers:
      - name: webserver-go-01
        image: cloudacademydevops/webappecho:latest
        command: ["/go/bin/demo"]
        ports:
        - containerPort: 80
